# bookrate

./: README.md  bookrate.1  bookrate_13.db  build.sh  build1.sh  general.xml
db/: bookrate.db  bookrate1.db  ratebook.db  test1.db  tutorial.db
doc/html/: annotated.html  app_8h_source.html  basepage_8h_source.html  bookmanager_8h_source.html  class_app-members.html  class_app.html  class_author-members.html  class_author.html  class_base_page-members.html  class_base_page.html  class_book-members.html  class_book.html  class_book_manager-members.html  class_book_manager.html  class_genre-members.html  class_genre.html  class_seria-members.html  class_seria.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  tables_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_3.js  functions_0.js  functions_1.js  functions_6.js  searchdata.js
doc/rtf/: dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  refman.rtf
src/: CMakeLists.txt  allbooks.cpp  allbooks.h  app.cpp  app.h  basepage.cpp  basepage.h  bookmanager.cpp  bookmanager.h  main.cpp  tables.cpp  tables.h
templates/: authors.h  basepage.html  lineEdit-template.html  style.css
